# ump_exam_room

./: .env.example  .gitignore  Caddyfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  install.sh  update.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260527_0844_3ca53ae0e834_initial_schema.py  20260527_0942_baaace43524f_drop_answers_question_id_fk.py  20260528_0606_33466d3da300_add_results_hash_to_exam_sessions.py  20260528_0951_fe7d68def6be_persist_question_count_on_exams.py  20260528_1005_cec7fe9c0f3f_add_join_code_to_exams.py  20260528_1029_9426860906d8_drop_join_code_from_exams.py  (+15 more)
backend/app/: bootstrap.py  check_candidate.py  check_update_safe.py  config.py  database.py  main.py  maintenance.py  reset_password.py  seed.py  set_license.py
backend/app/api/: deps.py
backend/load_tests/: locustfile.py  setup_load.py  ws_load.py
backend/tests/: conftest.py  test_absent.py  test_auth.py  test_auto_update_safety.py  test_check_candidate_cli.py  test_countdown_start.py  test_exam_assets_shrink.py  test_exam_flow.py  test_exam_status.py  test_excel_import_rows.py  test_excel_leading_zero.py  test_identifier.py  test_kiosk_only.py  test_kiosk_quit.py  test_kiosk_quit_guard.py  test_kiosk_wipe.py  test_license.py  test_passport_login.py  test_prefetch.py  test_preload_gate.py  test_qti21_compat.py  test_qti_crypt.py  test_qti_import.py  test_qti_linebreaks.py  test_qti_shuffle.py  test_report_two_sheets.py  test_rooms.py  test_seb_config.py  test_seb_enforce.py  test_static_assets.py  test_system_update.py  test_workflow.py
(+221 files in other folders)
