[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "exam-backend"
version = "0.1.0"
description = "Offline exam system backend (FastAPI)"
license = { text = "Proprietary" }
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.32,<0.35",
    "python-multipart>=0.0.12",
    # Settings / validation
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    # Database
    "sqlalchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30",
    "alembic>=1.14,<2",
    # Cache / session
    "redis>=5.2,<6",
    # Security
    "pyjwt>=2.10,<3",
    "bcrypt>=4.2,<5",
    "slowapi>=0.1.9",
    "cryptography>=44.0",
    # System metrics (server health dashboard)
    "psutil>=6.1,<8",
    # Parsing / files
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pyzipper>=0.3",
    "reportlab>=4.2",
    "pillow>=11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# The app's async DB engine + Redis client are module-level singletons that bind
# to the first event loop they touch. Run the whole suite on one session-scoped
# loop so those connections stay valid across tests.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
